# 2024Z-AutoML

./: .gitmodules  README.md
labs/lab01/: Lab01_pipeline.ipynb  Lab01_pipeline_semi_solutions.ipynb  (+1 more)
projects/project1/327286_327288_3131523/: pyproject.toml
projects/project1/327286_327288_3131523/best_params/: et_rs_best_params_joint.json  lr_tpe_best_params_joint.json  xgb_rs_best_params_joint.json
projects/project1/327286_327288_3131523/results/: ExtraTreesClassifier_RandomSampler_marginal_45062.csv  ExtraTreesClassifier_TPESampler_joint.csv  ExtraTreesClassifier_TPESampler_marginal_45062.csv  LogisticRegression_RandomSampler_joint.csv  LogisticRegression_RandomSampler_marginal_45062.csv  LogisticRegression_TPESampler_joint.csv  LogisticRegression_TPESampler_marginal_31.csv  LogisticRegression_TPESampler_marginal_37.csv  XGBClassifier_RandomSampler_marginal_31.csv  XGBClassifier_RandomSampler_marginal_43980.csv  XGBClassifier_TPESampler_joint.csv  XGBClassifier_TPESampler_marginal_43980.csv  averaged_tunability.csv  best_AUC_for_datasets_et.csv  best_AUC_for_datasets_lr.csv  best_AUC_for_datasets_xgb.csv  best_auc_for_models_mean_over_datasets.csv  compare_defaults_et.csv  compare_defaults_lr.csv  compare_defaults_xgb.csv  et_tunabilities.csv  lr_tunabilities.csv  xgb_tunabilities.csv
projects/project1/327286_327288_3131523/results/studies/: lr_BS_ID37_marginal_study.pkl  lr_rs_joint_study.pkl  lr_tpe_joint_study.pkl  xgb_tpe_joint_study.pkl
projects/project1/327286_327288_3131523/utils/: config.py  load_data.py  visualization_utils.py
(+733 files in other folders)
