[tool.poetry]
name = "tunability_benchmark"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Igor Kolodziej", "Hubert Kowalski", "Julia Przybytniowska"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
xgboost = "2.1.2"
openml = "0.12.2"
optuna = "4.0.0"
matplotlib = "3.9.2"
seaborn = "0.13.2"
plotly = "5.24.1"
jupyter = "1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
